typhon-cluster/apps/radarr/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: radarr
spec:
  parentRefs:
    - name: main
      namespace: gateway
  hostnames:
    - radarr.buildwithcaleb.com
  rules:
    - backendRefs:
        - name: radarr
          port: 7878
